--- a/Views/Movie/Search.cshtml
+++ b/Views/Movie/Search.cshtml
@@ -1,108 +1,21 @@
-﻿@model MovieViewModel;
-
+﻿@model Movie;
 @{
     ViewData["Title"] = "Search";
 }
 
-
-<div>
-    <img src="@Model.Movie.Poster"/>
-    <dl class="row">
-        <dt class="col-sm-2">
-            Title
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Title
-        </dd>
-        <dt class="col-sm-2">
-            Genre
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Genre
-        </dd>
-        <dt class="col-sm-2">
-            Runtime
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Runtime
-        </dd>
-        <dt class="col-sm-2">
-            Released
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Year
-        </dd>
-        <dt class="col-sm-2">
-            Plot
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Plot
-        </dd>
-        <dt class="col-sm-2">
-            Director
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Director
-        </dd>
-        <dt class="col-sm-2">
-            Writer
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Writer
-        </dd>
-        <dt class="col-sm-2">
-            Actors
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Actors
-        </dd>
-        <dt class="col-sm-2">
-            Awards
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Movie.Awards
-        </dd>
-        <dt class="col-sm-2">
-            Ratings
-        </dt>
-        <dd class="col-sm-10">
-            <ul>
-                @foreach (var rating in Model.Movie.Ratings)
-                {
-                    <li>@rating.Source: @rating.Value</li>
-                }
-            </ul>
-        </dd>
-        <h2>Streaming options</h2>
-        <dt class="col-sm-2">
-            Streaming Services
-        </dt>
-        <dd class="col-sm-10">
-            <ul>
-                @foreach (var stream in Model.Streaming)
-                {
-                    <li>@stream.ServiceName.ToUpper(), @stream.Type, @stream.Link, @stream.Price </li>
-                }
-            </ul>
-        </dd>
-       @*  <dt class="col-sm-2">
-            Streaming Type
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Streaming.Type
-        </dd>
-        <dt class="col-sm-2">
-            Price
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Streaming.Price
-        </dd>
-        <dt class="col-sm-2">
-            Link
-        </dt>
-        <dd class="col-sm-10">
-            <a href="@Model.Streaming.Link"/>
-        </dd> *@
-    </dl>
-    <a asp-action="Index">Back to menu</a>
+<h4>Search for a Movie or TV-Series </h4>
+<hr/>
+<div class="row">
+    <div class=" col-md-4">
+        <form asp-action="SearchResult">
+            <div class="form-group">
+                <label asp-for="Title" class="control-label">Title:</label>
+                <input asp-for="Title" value="@Model.Title"/>
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Search" class="btn btn-primary"/>
+            </div>
+        </form>
+    </div>
 </div>
