Eden AI impementation

--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -1,8 +1,29 @@
-﻿
+﻿@model List<Movie>
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<IdentityUser> userManager
+
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Index";
+    var user = await userManager.GetUserAsync(User);
 }
 
 <h1>View</h1>
 
 <a asp-action="Search">Search</a>
+<a asp-action="EdenAI">Test Eden</a>
+
+@if (user != null)
+{
+    <div class="row">
+        @foreach (var movie in Model)
+        {
+            <div class="card mx-2 my-1" style="width: 15rem">
+                <h2>@movie.Title</h2>
+                <img src="@movie.Poster" />
+                <div class="footer text-center text-body-secondary">
+                    <a asp-action="Details" asp-route-movieId="@movie.Id" data-bs-toggle="tooltip" data-bs-title="Show details"><i class="bi bi-arrow-right" style="font-size: 20px; color: cornflowerblue; padding-right:10px;">Details</i></a>
+                </div>
+            </div>
+        }
+    </div>
+}
