--- a/Views/Movie/SearchResult.cshtml
+++ b/Views/Movie/SearchResult.cshtml
@@ -95,16 +95,23 @@
             </dt>
             <dd class="col-sm-10">
                 <ul>
-                    @for (int i = 0; i < Model.StreamingServices.Count; i++)
+                    @if(Model.StreamingServices != null)
                     {
-                        <li>
-                            <input type="hidden" asp-for="StreamingServices[i].ServiceName" />
-                            <input type="hidden" asp-for="StreamingServices[i].Type" />
-                            <input type="hidden" asp-for="StreamingServices[i].Link" />
-                            <input type="hidden" asp-for="StreamingServices[i].Price" />
-                            @Model.StreamingServices[i].ServiceName.ToUpper(), @Model.StreamingServices[i].Type, @Model.StreamingServices[i].Link, @Model.StreamingServices[i].Price
-                        </li>
+                        @for (int i = 0; i < Model.StreamingServices.Count; i++)
+                        {
+                            <li>
+                                <input type="hidden" asp-for="StreamingServices[i].ServiceName" />
+                                <input type="hidden" asp-for="StreamingServices[i].Type" />
+                                <input type="hidden" asp-for="StreamingServices[i].Link" />
+                                <input type="hidden" asp-for="StreamingServices[i].Price" />
+                                @Model.StreamingServices[i].ServiceName.ToUpper(), @Model.StreamingServices[i].Type, @Model.StreamingServices[i].Link, @Model.StreamingServices[i].Price
+                            </li>
+                        }
                     }
+                    else {
+                        <li>No streaming options found</li>
+                    }
+                    
                 </ul>
             </dd>
         </dl>
