Added search bar, ImageAI storage fix

--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -9,6 +9,7 @@
 <div>
     <hr />
     <img src="@Model.Poster" />
+    <a asp-action="ImageAI" asp-route-movieId="@Model.Id">Generate AI Image</a>
     <dl class="row">
         <dt class="col-sm-2">
             Title
