--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -10,7 +10,7 @@
 <h1>View</h1>
 
 <a asp-action="Search">Search</a>
-<a asp-action="EdenAI">Test Eden</a>
+<a asp-action="ImageAI">Test Eden</a>
 
 @if (user != null)
 {
