--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-page text-center">
+    <img src="\images\background\movie_library.png" />
+    <h1 class="display-4">Welcome to your own Movie Library!</h1>
+    <p>Sign up or Log in to make your own Library of all of your favourite Movies and TV-Shows!</p>
 </div>
