--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -107,6 +107,53 @@ input, select, textarea {
     appearance: none;
 }
 
+/* Navbar */
+
+.logo {
+    height: 30px;
+    width: 200px;
+    padding-left: 20px;
+}
+
+.custom-nav {
+    background-color: #cbc9c9;
+}
+
+.account-settings {
+    padding-right: 10px;
+}
+
+/* Settings */
+
+.settings-menu {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+    padding-top: 50px;
+    max-width: 80%;
+}
+
+.settings-body h3 {
+    margin-bottom: 55px;
+    
+}
+
+.login, .password-reset, .validate {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-left: 35vw;
+}
+
+
+.register-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 55vh;
+    width: 120vw;
+}
+
 /* Home page*/
 
 .home-page {
@@ -213,6 +260,22 @@ input, select, textarea {
     left: 90%;
     padding: 15px;
     margin: 0 auto;
+}
+
+.index {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.index img {
+    padding-top: 75px;
+    padding-bottom: 50px
+}
+
+.index h3 {
+    font-size: x-large; 
 }
 
 /* Details */
@@ -1678,38 +1741,6 @@ button,
     cursor: pointer;
 }
 
-/*input[type="button"],
-input[type="submit"],
-input[type="reset"],
-button,
-.button {
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
-    background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2)), url("images/bg02.png");
-    -moz-transition: background-color 0.2s ease-in-out;
-    -webkit-transition: background-color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out;
-    -webkit-appearance: none;
-    position: relative;
-    display: inline-block;
-    background-color: #4091bf;
-    border-radius: 8px;
-    box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.35), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.35);
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
-    color: #fff !important;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 0.95em;
-    letter-spacing: 0.075em;
-    padding: 1em 2em;
-    outline: 0;
-    border: 0;
-    white-space: nowrap;
-    cursor: pointer;
-}*/
-
-
 
     input[type="button"].icon:before,
     input[type="submit"].icon:before,
@@ -2311,7 +2342,23 @@ ol.default {
     display: none;
 }
 
+
 @media screen and (max-width: 980px) {
+
+    /* Settings */
+
+    .login, .password-reset, .validate {
+        margin: 50px 10% 0 10%;
+        text-align: center;
+    }
+
+    .register-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 65vh;
+        width: 75vw;
+    }
 
     /* Basic */
 
