Final design changes

--- a/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -14,7 +14,7 @@
 <div>
     <h2>Change your account settings</h2>
     <hr />
-    <div class="settings-main row justify-content-center">
+    <div class="settings-main row">
         <div class="settings-menu col-md-3">
             <partial name="_ManageNav" />
         </div>
