--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -73,32 +73,38 @@
         <dd class="col-sm-10">
             @Model.Awards
         </dd>
-@*         <dt class="col-sm-2">
-            Ratings
-        </dt> *@
         <h2>Ratings</h2>
         <dd class="col-sm-10">
             <ul class="rating-list">
-                @foreach (var rating in Model.Ratings)
+                @if (Model.Ratings != null)
+                {
+                    @foreach (var rating in Model.Ratings)
+                    {
+                        <li>
+                            @{
+                                string imageName = "";
+                                switch (rating.Source)
+                                {
+                                    case "Internet Movie Database":
+                                        imageName = "imdb.png";
+                                        break;
+                                    case "Metacritic":
+                                        imageName = "metacritic.png";
+                                        break;
+                                    case "Rotten Tomatoes":
+                                        imageName = "rotten_tomatoes.png";
+                                        break;
+                                }
+                            }
+                            <img class="rating-img" src="/images/icons/@imageName">
+                            <p class="rating-score">@rating.Value</p>
+                        </li>
+                    }
+                }
+                else
                 {
                     <li>
-                        @{
-                            string imageName = "";
-                            switch (rating.Source)
-                            {
-                                case "Internet Movie Database":
-                                    imageName = "imdb.png";
-                                    break;
-                                case "Metacritic":
-                                    imageName = "metacritic.png";
-                                    break;
-                                case "Rotten Tomatoes":
-                                    imageName = "rotten_tomatoes.png";
-                                    break;
-                            }
-                        }
-                        <img class="rating-img" src="/images/icons/@imageName">
-                        <p class="rating-score">@rating.Value</p>
+                        <p>No ratings found</p>
                     </li>
                 }
             </ul>
@@ -118,7 +124,9 @@
                 }
                 else
                 {
-                    <li>No streaming options found</li>
+                    <li>
+                        <p>No streaming options found</p>
+                    </li>
                 }
 
             </ul>
