--- a/Views/Movie/SearchResult.cshtml
+++ b/Views/Movie/SearchResult.cshtml
@@ -91,28 +91,37 @@
             <h2>Ratings</h2>
             <dd class="col-sm-10">
                 <ul class="rating-list">
-                    @for (int i = 0; i < Model.Ratings.Count; i++)
+                    @if (Model.Ratings != null)
+                    {
+                        @for (int i = 0; i < Model.Ratings.Count; i++)
+                        {
+                            <li>
+                                @{
+                                    string imageName = "";
+                                    switch (Model.Ratings[i].Source)
+                                    {
+                                        case "Internet Movie Database":
+                                            imageName = "imdb.png";
+                                            break;
+                                        case "Metacritic":
+                                            imageName = "metacritic.png";
+                                            break;
+                                        case "Rotten Tomatoes":
+                                            imageName = "rotten_tomatoes.png";
+                                            break;
+                                    }
+                                }
+                                <img class="rating-img" src="/images/icons/@imageName">
+                                <p class="rating-score">@Model.Ratings[i].Value</p>
+                                <input type="hidden" asp-for="Ratings[i].Source" />
+                                <input type="hidden" asp-for="Ratings[i].Value" />
+                            </li>
+                        }
+                    }
+                    else
                     {
                         <li>
-                            @{
-                                string imageName = "";
-                                switch (Model.Ratings[i].Source)
-                                {
-                                    case "Internet Movie Database":
-                                        imageName = "imdb.png";
-                                        break;
-                                    case "Metacritic":
-                                        imageName = "metacritic.png";
-                                        break;
-                                    case "Rotten Tomatoes":
-                                        imageName = "rotten_tomatoes.png";
-                                        break;
-                                }
-                            }
-                            <img class="rating-img" src="/images/icons/@imageName">
-                            <p class="rating-score">@Model.Ratings[i].Value</p>
-                            <input type="hidden" asp-for="Ratings[i].Source" />
-                            <input type="hidden" asp-for="Ratings[i].Value" />
+                            <p>No ratings found</p>
                         </li>
                     }
                 </ul>
@@ -138,7 +147,9 @@
                     }
                     else
                     {
-                        <li>No streaming options found</li>
+                        <li>
+                            <p>No streaming options found</p>
+                        </li>
                     }
 
                 </ul>
