--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MovieLibrary</title>
+    <title>@ViewData["Title"]MovieLibrary</title>
     <link rel="icon" href="~/images/icons/favicon.png">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -26,7 +26,7 @@
                             <a class="nav-link text-secondary" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-secondary" asp-area="" asp-controller="Movie" asp-action="Index">My Movies</a>
+                            <a class="nav-link text-secondary" asp-area="" asp-controller="Movie" asp-action="Index">Watchlist</a>
                         </li>
                         <li class="nav-item search-bar">
                             <form id="f_search" method="get" asp-controller="Movie" asp-action="SearchResult">
