--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,31 +1,3 @@
-/*html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
-.searchBar {
-    width: 75px;
-}*/
-
-/*Original CSS ^^*/
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,800");
 @import url("fontawesome-all.min.css");
@@ -72,14 +44,6 @@ ol, ul {
     list-style: none;
 }
 
-blockquote, q {
-    quotes: none;
-}
-
-    blockquote:before, blockquote:after, q:before, q:after {
-        content: '';
-        content: none;
-    }
 
 table {
     border-collapse: collapse;
@@ -90,10 +54,6 @@ body {
     -webkit-text-size-adjust: none;
 }
 
-mark {
-    background-color: transparent;
-    color: inherit;
-}
 
 input::-moz-focus-inner {
     border: 0;
@@ -437,31 +397,10 @@ i, em {
     font-style: italic;
 }
 
-br.clear {
-    clear: both;
-}
-
-sub {
-    position: relative;
-    top: 0.5em;
-    font-size: 0.8em;
-}
-
-sup {
-    position: relative;
-    top: -0.5em;
-    font-size: 0.8em;
-}
 
 hr {
     border: 0;
     border-top: solid 1px #ddd;
-}
-
-blockquote {
-    border-left: solid 0.5em #ddd;
-    padding: 1em 0 1em 2em;
-    font-style: italic;
 }
 
 p, ul, ol, dl, table {
@@ -479,12 +418,6 @@ p, ul, ol, dl, table {
 }
 
 /* Container */
-
-/*.container {
-    margin: 0 auto;
-    max-width: calc(100% - 100px);
-    width: 1200px;
-}*/
 
 .container {
     margin: 0 auto;
@@ -1874,74 +1807,6 @@ ol.default {
         padding-left: 0.25em;
     }
 
-/* Box */
-
-.box.excerpt {
-    position: relative;
-    overflow: hidden;
-}
-
-    .box.excerpt header {
-        margin: 0 0 1em 0;
-    }
-
-    .box.excerpt .image, .box.excerpt p {
-        margin-bottom: 0;
-    }
-
-.box.feature1 {
-    text-align: center;
-}
-
-    .box.feature1 header {
-        margin-bottom: 3em;
-    }
-
-        .box.feature1 header.first h2 {
-            font-size: 2.5em;
-        }
-
-        .box.feature1 header.first p {
-            font-size: 1.2em;
-        }
-
-        .box.feature1 header.second {
-            position: relative;
-            display: inline-block;
-            text-align: left;
-            margin: 0 auto;
-            white-space: nowrap;
-            left: 24px;
-        }
-
-            .box.feature1 header.second p {
-                line-height: 1em;
-            }
-
-            .box.feature1 header.second:before {
-                font-size: 48px;
-                position: absolute;
-                right: 100%;
-                margin-right: 18px;
-                opacity: 0.5;
-                bottom: -4px;
-            }
-
-.box.feature2 {
-    text-align: center;
-}
-
-.box.article-list article {
-    border-bottom: solid 1px #dbdbdb;
-    margin: 0 0 2.75em 0;
-    padding: 0 0 2.75em 0;
-}
-
-    .box.article-list article:last-child {
-        border-bottom: 0;
-        margin-bottom: 0;
-        padding-bottom: 0;
-    }
 
 /* Icons */
 
@@ -2017,102 +1882,6 @@ ol.default {
             display: none;
         }
 
-.dropotron {
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0)), url("images/bg02.png");
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0)), url("images/bg02.png");
-    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0)), url("images/bg02.png");
-    background-image: linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0)), url("images/bg02.png");
-    position: relative;
-    background-color: #3B3E45;
-    background-color: rgba(59, 62, 69, 0.9);
-    border-radius: 8px;
-    box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 0px 0px 2px rgba(255, 255, 255, 0.075), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.2), 0px 2px 14px 0px rgba(0, 0, 0, 0.4);
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
-    padding: 1.5em;
-    line-height: 2.5em;
-    min-width: 15em;
-}
-
-    .dropotron.level-0 {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        margin-top: -2px;
-        box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 0px 0px 2px rgba(255, 255, 255, 0.075), 0px 2px 14px 0px rgba(0, 0, 0, 0.4);
-    }
-
-    .dropotron a, .dropotron span {
-        color: #aaa;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-weight: 800;
-        font-size: 0.8em;
-        letter-spacing: 0.075em;
-        outline: 0;
-    }
-
-    .dropotron li:hover > a, .dropotron li:hover > span {
-        color: #fff;
-    }
-
-/* Banner */
-
-#banner {
-    text-align: center;
-    width: 940px;
-    margin: 0 auto;
-    overflow: hidden;
-    padding: 9em 0 6em 0;
-}
-
-    #banner h2 {
-        border: solid 1px rgba(255, 255, 255, 0.25);
-        border-left: 0;
-        border-right: 0;
-        color: #fff;
-        color: rgba(255, 255, 255, 0.75);
-        font-size: 2.35em;
-        font-weight: 700;
-        line-height: 1.3em;
-        margin: 0 0 1.5em 0;
-    }
-
-        #banner h2 strong {
-            font-weight: 800;
-            color: inherit;
-        }
-
-        #banner h2:before {
-            content: '';
-            display: block;
-            border-top: solid 1px;
-            border-color: #888;
-            border-color: rgba(255, 255, 255, 0.25);
-            margin: 10px 0 1.25em 0;
-        }
-
-        #banner h2:after {
-            content: '';
-            display: block;
-            border-bottom: solid 1px;
-            border-color: #888;
-            border-color: rgba(255, 255, 255, 0.25);
-            margin: 1.25em 0 10px 0;
-        }
-
-    #banner p {
-        text-transform: uppercase;
-        color: #fff;
-        color: rgba(255, 255, 255, 0.75);
-        font-size: 1.5em;
-        font-weight: 700;
-        line-height: 1.3em;
-        letter-spacing: 0.04em;
-        float: left;
-        text-align: right;
-        width: 60%;
-        line-height: 1.5em;
-        margin: 0;
-    }
 
 /* Sidebar */
 
@@ -2122,28 +1891,6 @@ ol.default {
 
 /* Wrappers */
 
-#header-wrapper {
-    background: url("images/bg01.png"), url("../../images/header.jpg");
-    background-position: top left, center center;
-    background-size: auto, cover;
-    padding: 3em 0;
-}
-
-#main-wrapper {
-    background: #fff;
-}
-
-#footer-wrapper {
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("images/bg03.png"), url("images/bg02.png");
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("images/bg03.png"), url("images/bg02.png");
-    background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("images/bg03.png"), url("images/bg02.png");
-    background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("images/bg03.png"), url("images/bg02.png");
-    position: relative;
-    background-repeat: repeat-x, no-repeat, repeat;
-    background-size: 100% 100%, 100% 15em, auto auto;
-    background-position: top left, top center, top left;
-    padding: 7em 0 7em 0;
-}
 
 .wrapper {
     padding: 7em 0 7em 0;
@@ -2180,99 +1927,14 @@ ol.default {
         background-position: top center, top left;
     }
 
-/* Header */
-
-#header {
-    position: relative;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 0.75em;
-    margin-bottom: 0;
-}
-
-    #header .inner {
-        background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        position: relative;
-        height: 5.5em;
-        background-color: #3B3E45;
-        background-color: rgba(59, 62, 69, 0.9);
-        border-radius: 8px;
-        box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.45), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.15);
-        text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
-    }
-
-    #header h1 {
-        position: absolute;
-        left: 1.75em;
-        top: 50%;
-        margin-top: -0.65em;
-        font-size: 1.5em;
-        color: #fff;
-    }
-
-/* Footer */
-
-#footer {
-    margin-bottom: 0;
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
-    position: relative;
-    z-index: 2;
-}
-
-    #footer h2 {
-        font-size: 1.35em;
-        color: #fff;
-    }
-
-    #footer strong {
-        color: #fff;
-    }
-
-    #footer a {
-        color: #acb2bf;
-    }
-
-    #footer .button.alt {
-        box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.75), inset 0px 2px 1px 0px rgba(255, 255, 255, 0.25);
-    }
-
-    #footer ul.divided li, #footer ul.menu li {
-        border-color: #444;
-        border-color: rgba(255, 255, 255, 0.075);
-    }
-
-        #footer ul.divided li a {
-            text-decoration: none;
-        }
-
-    #footer ul.menu {
-        margin: 0;
-    }
-
-    #footer dl.contact dt {
-        color: #ddd;
-    }
-
-#copyright {
-    border-top: solid 1px;
-    border-color: #444;
-    border-color: rgba(255, 255, 255, 0.075);
-    text-align: center;
-    margin-top: 2em;
-    padding: 3em 0 4em 0;
-    color: inherit;
-}
-
-    #copyright a {
-        color: inherit;
-    }
 
 /* Large */
 
 @media screen and (max-width: 1280px) {
+
+    #toggleGrid {
+        display: none;
+    }
 
     /* Basic */
 
@@ -2288,9 +1950,6 @@ ol.default {
 
     /* Wrappers */
 
-    #header-wrapper {
-        padding: 2em 0;
-    }
 
     body.homepage #header-wrapper {
         height: auto;
@@ -2304,35 +1963,9 @@ ol.default {
         padding: 4.5em 0 4.5em 0;
     }
 
-    /* Banner */
-
-    #banner {
-        width: 100%;
-        padding: 4em 0 2em 0;
-    }
-
-        #banner h2 {
-            font-size: 2.2em;
-            line-height: 1.3em;
-            margin: 0 0 1em 0;
-        }
-
-        #banner p {
-            font-size: 1.25em;
-            line-height: 1.75em;
-            letter-spacing: 0.04em;
-            float: none;
-            text-align: center;
-            width: 100%;
-            margin: 0 0 2em 0;
-        }
 }
 
 /* Medium */
-
-#navPanel, #titleBar {
-    display: none;
-}
 
 
 @media screen and (max-width: 980px) {
@@ -2359,172 +1992,6 @@ ol.default {
 
     /* Nav */
 
-    #page-wrapper {
-        -moz-backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        backface-visibility: hidden;
-        -moz-transition: -moz-transform 0.5s ease;
-        -webkit-transition: -webkit-transform 0.5s ease;
-        -ms-transition: -ms-transform 0.5s ease;
-        transition: transform 0.5s ease;
-        padding-bottom: 1px;
-    }
-
-    #titleBar {
-        -moz-backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        backface-visibility: hidden;
-        background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg02.png");
-        -moz-transition: -moz-transform 0.5s ease;
-        -webkit-transition: -webkit-transform 0.5s ease;
-        -ms-transition: -ms-transform 0.5s ease;
-        transition: transform 0.5s ease;
-        background-color: rgba(59, 62, 69, 0.9);
-        box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 0px 0px 2px rgba(255, 255, 255, 0.075), 0px 1px 6px 0px rgba(0, 0, 0, 0.35);
-        display: block;
-        height: 44px;
-        left: 0;
-        position: fixed;
-        text-shadow: -1px -1px 0 black;
-        top: 0;
-        width: 100%;
-        z-index: 10001;
-    }
-
-        #titleBar .title {
-            display: block;
-            text-transform: uppercase;
-            font-weight: 800;
-            letter-spacing: 0.04em;
-            color: #fff;
-            line-height: 44px;
-            text-align: center;
-        }
-
-        #titleBar .toggle {
-            text-decoration: none;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 60px;
-            height: 44px;
-            opacity: 0.25;
-        }
-
-            #titleBar .toggle:before {
-                -moz-osx-font-smoothing: grayscale;
-                -webkit-font-smoothing: antialiased;
-                display: inline-block;
-                font-style: normal;
-                font-variant: normal;
-                text-rendering: auto;
-                line-height: 1;
-                text-transform: none !important;
-                font-family: 'Font Awesome 5 Free';
-                font-weight: 900;
-            }
-
-            #titleBar .toggle:before {
-                display: inline-block;
-                text-decoration: none;
-                font-size: 18px;
-                width: 44px;
-                height: 44px;
-                line-height: 44px;
-                text-align: center;
-                color: #fff;
-                content: '\f0c9';
-            }
-
-            #titleBar .toggle:active {
-                opacity: 0.5;
-            }
-
-    #navPanel {
-        -moz-backface-visibility: hidden;
-        -webkit-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        backface-visibility: hidden;
-        background-image: -moz-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg01.png");
-        background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg01.png");
-        background-image: -ms-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg01.png");
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.35)), url("images/bg01.png");
-        -moz-transform: translateX(-275px);
-        -webkit-transform: translateX(-275px);
-        -ms-transform: translateX(-275px);
-        transform: translateX(-275px);
-        -moz-transition: -moz-transform 0.5s ease;
-        -webkit-transition: -webkit-transform 0.5s ease;
-        -ms-transition: -ms-transform 0.5s ease;
-        transition: transform 0.5s ease;
-        background-color: #303238;
-        box-shadow: inset -1px 0px 0px 0px rgba(0, 0, 0, 0.5), inset -2px 0px 0px rgba(255, 255, 255, 0.15), inset -2px 0px 10px 0px rgba(0, 0, 0, 0.35);
-        display: block;
-        height: 100%;
-        left: 0;
-        overflow-y: auto;
-        position: fixed;
-        top: 0;
-        width: 275px;
-        z-index: 10002;
-    }
-
-        #navPanel .link {
-            display: block;
-            color: #aaa;
-            text-decoration: none;
-            height: 44px;
-            line-height: 44px;
-            border-top: solid 1px rgba(255, 255, 255, 0.05);
-            border-bottom: solid 1px rgba(0, 0, 0, 0.15);
-            padding: 0 1em 0 1em;
-            text-transform: uppercase;
-            font-weight: 700;
-            font-size: 0.95em;
-            letter-spacing: 0.075em;
-        }
-
-            #navPanel .link:first-child {
-                border-top: 0;
-            }
-
-            #navPanel .link:last-child {
-                border-bottom: 0;
-            }
-
-        #navPanel .indent-1 {
-            display: inline-block;
-            width: 1em;
-        }
-
-        #navPanel .indent-2 {
-            display: inline-block;
-            width: 2em;
-        }
-
-        #navPanel .indent-3 {
-            display: inline-block;
-            width: 3em;
-        }
-
-        #navPanel .indent-4 {
-            display: inline-block;
-            width: 4em;
-        }
-
-        #navPanel .indent-5 {
-            display: inline-block;
-            width: 5em;
-        }
-
-        #navPanel .depth-0 {
-            color: #fff;
-        }
 
     body.navPanel-visible #page-wrapper {
         -moz-transform: translateX(275px);
@@ -2547,17 +2014,8 @@ ol.default {
         transform: translateX(0);
     }
 
-    /* Header */
-
-    #header, #nav {
-        display: none;
-    }
-
     /* Wrappers */
 
-    #header-wrapper {
-        display: none;
-    }
 
     .homepage #header-wrapper {
         display: block;
@@ -2572,28 +2030,52 @@ ol.default {
         padding-top: 0;
     }
 
-    /* Banner */
-
-    #banner {
-        padding: 8em 0 4em 0;
-    }
-
-        #banner br {
-            display: none;
-        }
-
-    /* Sidebar */
-
-    #sidebar {
-        margin-top: 1em;
-    }
 }
 
 /* Small */
 
 @media screen and (max-width: 736px) {
 
+
+    /* Movie cards*/
+
+    .card-container {
+        margin-top: 0px;
+    }
+
+    .card-parent {
+        max-width: calc(50% - 10px);
+        min-width: 125px;
+    }
+
     /* Basic */
+
+    .logo {
+        height: 30px;
+        width: 100px;
+        padding-left: 5px;
+    }
+
+    /* Details */
+
+    .detail-buttons input {
+        max-width: 33%;
+        padding-left: 18px;
+        font-size: 10px;
+    }
+
+    .stream-img {
+        width: 25%;
+        max-height: 125px
+    }
+
+    .details-info dt, .details-info dd {
+        padding-left: 6vw;
+    }
+
+    .details-info h2 {
+        padding-top: 5vw;
+    }
 
     body, input, select, textarea {
         line-height: 1.75em;
@@ -2607,6 +2089,11 @@ ol.default {
 
     h2 {
         line-height: 1.5em;
+    }
+
+    .index h3 {
+        font-size: x-large;
+        padding-left: 20px;
     }
 
     /* Section/Article */
@@ -2674,45 +2161,7 @@ ol.default {
 
     /* Wrappers */
 
-    #header-wrapper {
-        background-position: 35% 50%;
-    }
-
-    #footer-wrapper {
-        padding: 3em 20px 3em 20px;
-    }
-
-        #footer-wrapper section, #footer-wrapper article {
-            margin-bottom: 3em !important;
-        }
-
     .wrapper {
         padding: 3em 20px 3em 20px;
     }
-
-    /* Banner */
-
-    #banner {
-        padding: 40px 20px 40px 20px;
-    }
-
-        #banner h2 {
-            font-size: 18pt !important;
-        }
-
-    /* Sidebar */
-
-    #sidebar {
-        margin-top: 2em;
-    }
-
-    /* Footer */
-
-    #copyright {
-        margin-top: 0;
-        padding: 3em 0 1em 0;
-    }
-
-
-
 }
