Design changes searchResult

--- a/Views/Movie/SearchResult.cshtml
+++ b/Views/Movie/SearchResult.cshtml
@@ -161,7 +161,7 @@
         </dl>
         @if (user != null)
         {
-            <div class="form-group detail-buttons">
+            <div class="form-group detail-buttons search-buttons">
                 <input type="submit" value="Add to list" class="btn btn-primary" />
                 <input type="button" value="Back to menu" onclick="location.href='@Url.Action("Index", "Movie")'" />
             </div>
